NetteStandard/Tests/Naming/MeaningfulClassNamesTest.inc
<?php

class HomepagePresenter { }    // good
class MyPresenter { }          // error
class MySuperCoolPresenter { } // warning
